-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.4.0-beta
-
None
-
3d57758d61cab890217ef75611076397cdf0061e
To reproduce:
0) Remove QtCreator.ini and qtcreator/codestyles folder (inside .config/Nokia)
1) Run QtCreator 2.3
2) Create a new session and a new project
3) Set global tab settings to e.g. 6 (tab and indent)
4) Close QtCreator 2.3, open 2.4
5) Load the session from point 2
6) Tab settings are 4 (bug). Trying to change global tab settings to 6 doesn't influence the editor (need an explanation in release notes - now you do that in C++ | Code Style Settings)
| For Gerrit Dashboard: QTCREATORBUG-6614 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 9689,5 | Transform always old code style settings | 2.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |