Transform always old code style settings

Before, we didn't transform the code style settings
if they were defaults (so no entries were written
for them in the settings). In case someone
changed global tab settings and didn't touch
code style settings in 2.3, the code style settings
were not transformed. Now, we transform them too
so that legacy code style settings in 2.4
(named: "Old Creator") contains old global tab settings.
We also take care of not creating legacy settings
in case neither textTabPreferences nor CppTabPreferences
nor CppCodeStyleSettings were saved (when creator 2.3 used only
defaults or when it's a first run of creator 2.4 without
old settings).
Handle legacy transformation for qml too.
Make a code bit more readable.

Task-number: QTCREATORBUG-6614
Change-Id: I37b8dd4d1170f397b7d304c59575d9ae37884564
Reviewed-by: Leandro Melo <leandro.melo@nokia.com>
Reviewed-by: Christian Kamm <christian.d.kamm@nokia.com>